$(PROGRAMS): $(LDEPS)

bin_PROGRAMS 	= phid
noinst_HEADERS	= phid.h
phid_SOURCES	= phid.C

CLEANFILES = core *.core *~
EXTRA_DIST = .cvsignore

MAINTAINERCLEANFILES = aclocal.m4 install-sh mkinstalldirs \
	missing configure config.guess config.sub config.h.in \
	ltconfig ltmain.sh INSTALL COPYING Makefile.in stamp-h.in
