#####################################################################
#
# Copyright (c) 2003 Intel Corporation
# All rights reserved.
# 

all:
	cp p2/.libs/libp2python.so ./lib/p2python.so

EXTRA_DIST = lib/README \
             scripts/dfrun.py scripts/netcc.py \
             scripts/recv.df scripts/sender.df

SUBDIRS=p2 dfparser
